[package]
name = "blysk-data-backup"
description = "Fast data only backup tool for MySQL compatible servers"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx = { workspace = true, features = ["rust_decimal"] }
rust_decimal = "1.36.0"
thiserror.workspace = true
tokio = { workspace = true, features = [ "sync" ] }
serde = "1"
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true, features = [ "test-util", "macros" ] }
testcontainers-magento-data = { workspace = true }