cargo-features = ["edition2024"]

[package]
name = "blysk-data-stream-core"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "sync" ] }

[dev-dependencies]
tokio = { workspace = true, features = [ "test-util", "macros" ] }