[package]
name = "blysk-data-stream-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "sync" ] }

[dev-dependencies]
tokio = { workspace = true, features = [ "test-util", "macros" ] }